# varanalyise_cl

./: .env.example  .gitignore  AGENTS.md  DEEP_ENGINE_TECHNICAL_BACKGROUND.md  README.md  SKILLS.md  SPEC.md  migration.md  pyproject.toml  requirements.txt
runs/: latest  latest_run
runs/spikes/deep/: latest_run
runs/spikes/deep/20260212_152211/: audit_log.json  comparison.md  evaluation.json  executed_queries.sql  findings.json  report.json  report.md  trace.json
runs/spikes/deep/20260212_205905/: audit_log.json  comparison.md  evaluation.json  executed_queries.sql  (+3 more)
scripts/: run_deep_agent.py
src/va_agent/: __init__.py  cli.py  config.py  models.py
src/va_agent/analysis/: confidence.py  decomposition.py  variance.py
src/va_agent/data/: lineage_registry.py  seed_generator.py
src/va_agent/graph/: build.py  client_manager.py  deep_engine.py  proxy_env.py  state.py
src/va_agent/output/: schemas.py  writer.py
src/va_agent/prompts/: deep_spike_agents.md  hypothesis.md  synthesis.md  system.md
src/va_agent/sql/: connection.py  executor.py  guard.py  templates.py
src/va_agent/tools/: bound_tools.py  lineage_tools.py  report_tools.py  run_context.py  sql_tools.py
tests/: conftest.py
tests/integration/: test_seed_generator.py  test_sql_pipeline.py  test_tools.py
tests/regression/: test_known_anomalies.py  test_runtime_budget.py
tests/unit/: test_cli_lock.py  test_client_manager.py  test_confidence.py  test_connection.py  test_decomposition.py  test_deep_engine.py  test_executor.py  test_guard.py  test_lineage.py  test_models.py  test_proxy_env.py
