[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "va-agent"
version = "0.1.0"
description = "Autonomous Variance Analysis Agent — local-first, multi-hop SQL lineage, confidence-scored root-cause findings"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "deepagents>=0.4.1",
    "langchain-google-genai>=4.0.0",
    "langgraph>=0.4.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "sqlparse>=0.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
va = "va_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/va_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require API key and are slow (deselect with '-m \"not slow\"')",
    "regression: regression tests for known anomalies",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
